# cat-spider

./: Dockerfile  README.md  entrypoint.sh  pyproject.toml
doc/: stats.md
notebook/: weav.ipynb
src/common/: db.py  log.py  mongo.py  settings.py  utils.py  vectordb.py
src/migrations/: env.py
src/migrations/versions/: bb9836bf41bd_initial.py
src/models/: cat_meta.py  md.py  vk_cms.py  vk_filestorage.py  vk_public.py
src/notebook/: marqo_lab.ipynb
src/tasks/: fetch_files.py  import_files.py  import_pages.py  import_text_files.py  recreate_collection.py  wait_dbs.py
src/tasks/pg/: fetch_files.py  fetcher.py  import_files.py  import_page.py  import_pages.py  import_site.py
src/vectordb/: marqo_vdb.py  weaviate_vdb.py
