[project]
name = "cat-spider"
package-mode = false
version = "0.0.0"
description = ""
requires-python = "~=3.12"
dependencies = [
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pymongo (>=4.12.0,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "marqo (>=3.11.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
